--- a/Resume.html
+++ b/Resume.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Your_Name Data Science Portfolio - about me</title>
+<title>Your_Name Data Science Portfolio - Sebastian Berber Resume</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -92,7 +92,7 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item">
-    <a class="nav-link active" href="./index.html" aria-current="page"> 
+    <a class="nav-link" href="./index.html"> 
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
@@ -144,9 +144,17 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#title-1-header" id="toc-title-1-header" class="nav-link active" data-scroll-target="#title-1-header">Title 1 Header</a>
+  <li><a href="#objective" id="toc-objective" class="nav-link active" data-scroll-target="#objective">Objective</a></li>
+  <li><a href="#skills" id="toc-skills" class="nav-link" data-scroll-target="#skills">Skills</a></li>
+  <li><a href="#education" id="toc-education" class="nav-link" data-scroll-target="#education">Education:</a></li>
+  <li><a href="#work-experience" id="toc-work-experience" class="nav-link" data-scroll-target="#work-experience">Work Experience</a>
   <ul class="collapse">
-  <li><a href="#title-2-header" id="toc-title-2-header" class="nav-link" data-scroll-target="#title-2-header">Title 2 Header</a></li>
+  <li><a href="#pressure-washing-technician-binney-and-the-jets-liberty-hill-texas-may-2023---present" id="toc-pressure-washing-technician-binney-and-the-jets-liberty-hill-texas-may-2023---present" class="nav-link" data-scroll-target="#pressure-washing-technician-binney-and-the-jets-liberty-hill-texas-may-2023---present">Pressure Washing Technician, Binney and the Jets [Liberty Hill, Texas] May 2023 - Present</a></li>
+  <li><a href="#volunteer-service-states-massachusetts-connecticut-rhode-island-april-2021---may-2023" id="toc-volunteer-service-states-massachusetts-connecticut-rhode-island-april-2021---may-2023" class="nav-link" data-scroll-target="#volunteer-service-states-massachusetts-connecticut-rhode-island-april-2021---may-2023">Volunteer Service, [States: Massachusetts, Connecticut, Rhode Island] April 2021 - May 2023</a></li>
+  <li><a href="#independent-contractor-door-dash-austin-texas-april-2021---may-2023" id="toc-independent-contractor-door-dash-austin-texas-april-2021---may-2023" class="nav-link" data-scroll-target="#independent-contractor-door-dash-austin-texas-april-2021---may-2023">Independent Contractor, Door Dash, [Austin, Texas] April 2021 - May 2023</a></li>
+  <li><a href="#food-service-team-member-whataburger-cedar-park-texas-april-2020---march-2021" id="toc-food-service-team-member-whataburger-cedar-park-texas-april-2020---march-2021" class="nav-link" data-scroll-target="#food-service-team-member-whataburger-cedar-park-texas-april-2020---march-2021">Food Service Team Member, Whataburger, [Cedar Park, Texas] April 2020 - March 2021</a></li>
+  <li><a href="#computer-technician-intern-praxitek-llc-cedar-park-texas-march-2020---april-2020" id="toc-computer-technician-intern-praxitek-llc-cedar-park-texas-march-2020---april-2020" class="nav-link" data-scroll-target="#computer-technician-intern-praxitek-llc-cedar-park-texas-march-2020---april-2020">Computer Technician Intern, PraxiTek LLC [Cedar Park, Texas] March 2020 - April 2020</a></li>
+  <li><a href="#irrigation-repair-technician-ondemand-sprinklers-liberty-hill-texas-june-2019---august-2019" id="toc-irrigation-repair-technician-ondemand-sprinklers-liberty-hill-texas-june-2019---august-2019" class="nav-link" data-scroll-target="#irrigation-repair-technician-ondemand-sprinklers-liberty-hill-texas-june-2019---august-2019">Irrigation Repair Technician, OnDemand Sprinklers [Liberty Hill, Texas] June 2019 - August 2019</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -156,8 +164,8 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">about me</h1>
-<p class="subtitle lead">my data science portfolio</p>
+<h1 class="title">Sebastian Berber Resume</h1>
+<p class="subtitle lead">Sebastian Berber Portfolio</p>
 </div>
 
 
@@ -174,10 +182,74 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="title-1-header" class="level1">
-<h1>Title 1 Header</h1>
-<section id="title-2-header" class="level2">
-<h2 class="anchored" data-anchor-id="title-2-header">Title 2 Header</h2>
+<section id="objective" class="level2">
+<h2 class="anchored" data-anchor-id="objective">Objective</h2>
+<p>Highly motivated and skilled individual with a diverse work history, seeking employment to save money for college. Experienced in various roles, including irrigation repair, customer service, technical support, and food delivery. Committed to providing exceptional service, demonstrating a strong work ethic, and achieving customer satisfaction</p>
+</section>
+<section id="skills" class="level2">
+<h2 class="anchored" data-anchor-id="skills">Skills</h2>
+<pre><code>• Strong problem-solving and analytical abilities.
+• Excellent customer service and communication skills.
+• Proficient in computer repair and maintenance.
+• Bilingual fluency in English and Spanish (written and spoken).
+• Efficient and dependable, delivering results in a timely manner.
+• Ability to work independently and as part of a team</code></pre>
+</section>
+<section id="education" class="level2">
+<h2 class="anchored" data-anchor-id="education">Education:</h2>
+<pre><code>• High School Diploma (year graduated: 2020)
+  Liberty Hill High School, Liberty Hill, Texas
+• Bachelor's Degree in Data Science (expected completion: 2027)
+  Brigham Young University-Idaho, Rexburg, Idaho</code></pre>
+</section>
+<section id="work-experience" class="level1">
+<h1>Work Experience</h1>
+<section id="pressure-washing-technician-binney-and-the-jets-liberty-hill-texas-may-2023---present" class="level2">
+<h2 class="anchored" data-anchor-id="pressure-washing-technician-binney-and-the-jets-liberty-hill-texas-may-2023---present">Pressure Washing Technician, Binney and the Jets [Liberty Hill, Texas] May 2023 - Present</h2>
+<pre><code>• Successfully pressure washed commercial vehicles and waste receptacles, maintaining their cleanliness
+  and appearance.
+• Operated company truck, pulling the water tank and pressure washing trailer, ensuring efficient
+  completion of tasks.
+• Conducted equipment maintenance and repairs to maximize performance and minimize downtime.</code></pre>
+</section>
+<section id="volunteer-service-states-massachusetts-connecticut-rhode-island-april-2021---may-2023" class="level2">
+<h2 class="anchored" data-anchor-id="volunteer-service-states-massachusetts-connecticut-rhode-island-april-2021---may-2023">Volunteer Service, [States: Massachusetts, Connecticut, Rhode Island] April 2021 - May 2023</h2>
+<pre><code>• Engaged directly with the public through social media and face-to-face meetings.
+• Taught English speaking classes to non-English speakers, sharing language skills and promoting education.
+• Volunteered at food banks and soup kitchens, serving the community in need.
+• Served as a trainer for new missionaries and District Leader, providing training and guidance to other
+  missionaries.</code></pre>
+</section>
+<section id="independent-contractor-door-dash-austin-texas-april-2021---may-2023" class="level2">
+<h2 class="anchored" data-anchor-id="independent-contractor-door-dash-austin-texas-april-2021---may-2023">Independent Contractor, Door Dash, [Austin, Texas] April 2021 - May 2023</h2>
+<pre><code>• Delivered food orders promptly, providing excellent customer service and achieving substantial tips.
+• Demonstrated adaptability and efficiency in a fast-paced, customer-focused environment.
+• Maintained professionalism and ensured customer satisfaction.</code></pre>
+</section>
+<section id="food-service-team-member-whataburger-cedar-park-texas-april-2020---march-2021" class="level2">
+<h2 class="anchored" data-anchor-id="food-service-team-member-whataburger-cedar-park-texas-april-2020---march-2021">Food Service Team Member, Whataburger, [Cedar Park, Texas] April 2020 - March 2021</h2>
+<pre><code>• Took customer food orders with accuracy and efficiency.
+• Demonstrated versatility by excelling in working at various food prep stations.
+• Maintained cleanliness and organization in work areas to meet quality standards.
+• Consistently delivered exceptional customer service, ensuring customer satisfaction and fostering positive
+  interactions and a positive dining experience.
+• Received positive feedback from the employer for being dependable, hardworking, and displaying a
+  positive attitude.
+• Collaborated with team members to ensure smooth workflow and efficient operations.</code></pre>
+</section>
+<section id="computer-technician-intern-praxitek-llc-cedar-park-texas-march-2020---april-2020" class="level2">
+<h2 class="anchored" data-anchor-id="computer-technician-intern-praxitek-llc-cedar-park-texas-march-2020---april-2020">Computer Technician Intern, PraxiTek LLC [Cedar Park, Texas] March 2020 - April 2020</h2>
+<pre><code>• Assisted senior technician in stripping, disassembling, and disposing of old computers.
+• Conducted hard drive data sanitization and basic PC repairs under supervision.
+• Participated in CAT 6 cable installation and performed basic equipment maintenance tasks.</code></pre>
+</section>
+<section id="irrigation-repair-technician-ondemand-sprinklers-liberty-hill-texas-june-2019---august-2019" class="level2">
+<h2 class="anchored" data-anchor-id="irrigation-repair-technician-ondemand-sprinklers-liberty-hill-texas-june-2019---august-2019">Irrigation Repair Technician, OnDemand Sprinklers [Liberty Hill, Texas] June 2019 - August 2019</h2>
+<pre><code>• Conducted pipe and sprinkler repairs, ensuring efficient and effective irrigation systems.
+• Programmed sprinkler systems to meet specific client requirements and optimize water usage.
+• Successfully couriered parts for management and other teams, ensuring seamless operations.
+• Demonstrated professionalism and courtesy when interacting with customers, providing excellent service.
+• Received consistent feedback from employer highlighting my speed, efficiency, and dep</code></pre>
 <p><a href="https://quarto.org/docs/authoring/markdown-basics.html#links-images">MarkDown Basics</a></p>
 
 
